# su6i-yar

./: .gitignore  Amir_Voice_Test.ipynb  LICENSE  README.md  check_cobalt.py  check_models.py  find_cobalt.py  insta_1766076369.txt  install.sh  install_models.sh  pyproject.toml  requirements.txt  run.sh  run_dev.sh  run_tests.sh  setup_env.py  smart_insta_dl.py  su6i_yar.py  test_cobalt.py  test_deepseek.py  user_data.json
.cursor/rules/: global.mdc  python_bot_standards.mdc
.cursor/skills/: ai-cinematography.md  ai-dubbing-localization.md  ai-logic-patterns.md  ai-sfx-generation.md  ai-voice-cloning-finetuning.md  ascii-game-dev.md  audio-processing.md  automated-scriptwriting.md  blender-automation.md  chrome-extension-best-practices.md  cli-table-alignment.md  copywriting.md  data-science-workflow.md  data-visualization.md  desktop-gui-dev.md  dia-tts.md  director-visual.md  emotional-voice-acting.md  episode-structure-45min.md  fastapi-best-practices.md  ffmpeg-recipes.md  financial-data-science.md  flask-json-guide.md  github-code-quality.md  howto-documentation.md  imagemagick-technical.md  jetpack-compose-guidelines.md  js-ts-code-quality.md  kubernetes-docs.md  linux-cuda-python.md  llm-ml-workflow.md  macos-automation.md  manim-animation.md  method-of-loci.md  modern-web-ui.md  moltbot-orchestration.md  multi-rag-orchestration.md  (+26 more)
docs/: GUIDE_EN.md  GUIDE_FA.md
models/: fa_IR-mana-medium.onnx.json
scripts/: check_gemini.py  install.sh  install_service.sh  run_dev.sh  run_tests.sh  su6i-yar.service
src/: main.py
tests/: test_tts_local.py
(+43 files in other folders)
